# mfe1

./: CMakeLists.txt  LICENSE  Makefile  README.md  bc.f90  bls_solver.f90  common_io.f90  elt_array.f90  elt_lapl.f90  elt_mfe.f90  fpa.f90  init_procs.f90  mfe1.f90  mfe_data.f90  mfe_extents.f90  mfe_procs.f90  mfe_solver.f90  norm_data.f90  precision.f90  prob_procs.f90  system_io.f90
burgers/: CMakeLists.txt  Makefile  problem.f90
burgers/Data/: mfegrf-ex1  mfegrf-ex2  mfein-ex1  mfein-ex2  mfelog-ex1  mfelog-ex2
conv-diff/: Makefile  mfein  problem.f90
conv-diff/Data/: mfegrf-ex2  mfein-ex1  mfelog-ex1  mfelog-ex2
doc/: modules.daVinci  modules.ps
drift-diff/: Makefile  mfeconst.f90  problem.f90
drift-diff/Data/: mfegrf-ex1  mfegrf-ex2  mfein-ex1  mfein-ex2  mfelog-ex1  mfelog-ex2
examples/Burgers/: Makefile  prob_procs.f90
examples/Conv-Diff/: Makefile  mfe_extents.f90  mfein  prob_procs.f90
examples/Drift-Diff/: CMakeLists.txt  mfe_extents.f90  prob_procs.f90
examples/Drift-Diff/Data/: mfegrf-ex2  mfein-ex1  mfein-ex2  mfelog-ex1  mfelog-ex2
examples/Navier-Stokes/: Makefile  mfe_extents.f90  mfein  prob_procs.f90
navier-stokes/: CMakeLists.txt  Makefile  mfeconst.f90  problem.f90  source
navier-stokes/Data/: mfegrf-noh  mfegrf-sod  mfelog-sod
nernst-planck/: mfeconst.f90  problem.f90  src
nernst-planck/Data/: mfegrf-ex1  mfein-ex1  mfelog-ex1
nldiff/: CMakeLists.txt  Makefile  README.md  att.f90  fit.f  init.f90  mfein  output.f90  problem.f90  src
richards/: CMakeLists.txt  Makefile  fun.f90  mfein  problem.f90  source
source/: bc.f90  bls_solver.f90  common_io.f90  elt_array.f90  elt_lapl.f90  elt_mfe.f90  fpa.f90  init_procs.f90  mfe1.f90  mfe_data.f90  mfe_procs.f90  mfe_solver.f90  norm_data.f90  precision.f90  prob_procs.f90  system_io.f90
source/common/: comio.f90  fpa.f90  kindpar.f90  locmfeprocs.f90  mfe1.f90  mfeprocs.f90  mfesolve.f90  output.f90  sysio.f90  title.txt
source/scalar/: bc.f90  blssolve.f90  fpa.f90  init.f90  locarray.f90  locglb.f90  loclapl.f90  locmfe.f90  mfeconst.f90  mfedata.f90  mfesolve.f90  mfetypes.f90  norm.f90  problem-stub.f90
src/common/: fpa.f90  (+6 more)
(+44 files in other folders)
